--- a/front/finish.html
+++ b/front/finish.html
@@ -1,20 +1,60 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orinoco - Panier</title>
-    <link rel="shortcut icon" type="image/png" href="">  
-    <meta name="robots" content="index, follow">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <a href="index.html">Acceuil</a>
-        <a href="caddie.html">Panier</a>
-        
-
-    </header>
-    <script async src="script.js"></script>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Orinoco - Accueil</title>
+        <meta name="keywords" content="produit vintage">
+        <meta name="description" content="vente en ligne de produit vintage">
+        <link rel="shortcut icon" type="image/png" href="">
+        <meta name="robots" content="index, follow">
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+            integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+            integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    </head>
+    
+    <body>
+        <header>
+            <div class="bg-dark">
+                <div class="container">
+                    <div class="row">
+                        <nav class="col navbar navbar-expand-lg navbar-dark">
+                            <a class="navbar-brand" href="index.html"><i class="fas fa-shopping-cart">&nbspOrinoco</i></a>
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent"
+                                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div id="navbarContent" class="collapse navbar-collapse">
+                                <ul class="navbar-nav">
+                                    <li class="nav-item active">
+                                        <a class="nav-link" href="index.html">Accueil</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="caddie.html">Panier</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <main>
+            <div class="row">
+                <div class="col">
+                    <p>merci M. <span id="name-repeat"></span> pour votre commande.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <p>Voici son recapilatif:</p>
+                    <p id="recapitulatif"></p>
+                </div>
+            </div>
+    </main>
+    <script async src="./js/script.js"></script>
+    <script defer src="./js/finish.js"></script>
 </body>
 </html>
