--- a/front/index.html
+++ b/front/index.html
@@ -17,35 +17,29 @@
 </head>
 
 <body>
-    <header>
-        <div class="bg-dark">
-            <div class="container">
-                <div class="row">
-                    <nav class="col navbar navbar-expand-lg navbar-dark">
-                        <a class="navbar-brand" href="index.html"><i class="fas fa-shopping-cart">&nbspOrinoco</i></a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent"
-                            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div id="navbarContent" class="collapse navbar-collapse">
-                            <ul class="navbar-nav">
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="index.html">Accueil</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="caddie.html">Panier</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </nav>
-                </div>
+    <div class="bg-dark">
+        <div class="container">
+            <div class="row">
+                <nav class="col navbar navbar-expand-lg navbar-dark">
+                    <a class="navbar-brand" href="index.html"><i class="fas fa-shopping-cart">&nbspOrinoco</i></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div id="navbarContent" class="collapse navbar-collapse">
+                        <ul class="navbar-nav">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="index.html">Accueil</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="caddie.html">Panier</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
             </div>
         </div>
-    </header>
-
-
-
-
+    </div>
 
     <main>
         <div class="container">
@@ -59,13 +53,20 @@
             </div>
         </div>
 
-
-
     </main>
     <script async src="js/script.js"></script>
     <script defer src="js/function.js"></script>
     <script defer src="js/fetch.js"></script>
     <script defer src="js/menu.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 
 </body>
 
