--- a/front/caddie.html
+++ b/front/caddie.html
@@ -49,36 +49,56 @@
                 <p>Panier</p>
             </div>
         </div>
-        <div class="row d-flex justify-content-center">
-            <div class="col-3 col-md-2 border">Produit</div>
-            <div class="col-3 col-md-2 border">Prix Unitaire</div>
-            <div class="col-3 col-md-2 border">Nombre</div>
-            <div class="col-3 col-md-2 border">Total</div>
+        <div class="row empty">
+            <div class="col-12 h5 text-center">
+                <p>Votre panier est actuelement vide</p>
+            </div>
         </div>
-        <div class="row">
-            <div class="col-6">
-               <form action="finish.html" class="formulaire">
-                    <label for="name">Entrer votre nom</label>
-                    <input type="text" name="name" id="name" required>
-                    <br>
-                    <label for="prenom">Entrer votre prénom</label>
-                    <input type="text" name="prenom" id="prenom" required>
-                    <br>
-                    <label for="adresse">Entrer votre adresse</label>
-                    <input type="text" name="adresse" id="adresse" required>
-                    <br>
-                    <label for="ville">Entrer votre ville</label>
-                    <input type="text" name="ville" id="ville" required>
-                    <br>
-                    <label for="email">Entrer votre email</label>
-                    <input type="email" name="email" id="email" required>
-                    <br>
-                <input type="submit" value="Commander">
+        <div class="full">
+            <div class="row d-flex justify-content-center">
+                <div class="col-3 col-md-2 border">Produit</div>
+                <div class="col-3 col-md-2 border">Prix Unitaire</div>
+                <div class="col-3 col-md-2 border">Nombre</div>
+                <div class="col-3 col-md-2 border">Total</div>
+            </div>
+            <div class="row d-flex justify-vontent-center"></div>
+            <br>
+            <div class="row">
+                <div class="col-6">
+                    <form action="finish.html" class="formulaire">
+                        <label for="name">Entrer votre nom</label>
+                        <input type="text" name="name" id="name" required>
+                        <br>
+                        <label for="prenom">Entrer votre prénom</label>
+                        <input type="text" name="prenom" id="prenom" required>
+                        <br>
+                        <label for="adresse">Entrer votre adresse</label>
+                        <input type="text" name="adresse" id="adresse" required>
+                        <br>
+                        <label for="ville">Entrer votre ville</label>
+                        <input type="text" name="ville" id="ville" required>
+                        <br>
+                        <label for="email">Entrer votre email</label>
+                        <input type="email" name="email" id="email" required>
+                        <br>
+                        <br>
+                        <input type="submit" value="Commander">
 
-                </form>
+                    </form>
                 </div>
+            </div>
         </div>
     </main>
+    <script src="./js/caddie.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 
 </body>
 
