--- a/front/index.html
+++ b/front/index.html
@@ -33,7 +33,10 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="caddie.html">Panier</a>
+                            </li>                            <li class="nav-item">
+                                <a class="nav-link" href="test.html">test</a>
                             </li>
+
                         </ul>
                     </div>
                 </nav>
