--- a/front/visual2.html
+++ b/front/visual2.html
@@ -68,7 +68,7 @@
     <script async src="./js/script.js"></script>
     <script defer src="./js/function.js"></script>
     <script defer src="./js/fetch.js"></script>
-    <script defer src="./js/visual.js"></script>
+    <script defer src="./js/visual2.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
     crossorigin="anonymous"></script>
