--- a/front/visual.html
+++ b/front/visual.html
@@ -55,7 +55,7 @@
                             <select name="color" id="option-color">
                             </select>
                         </form>
-                        <input type="button" value="mettre dans le panier" onclick="valideColor()">
+                        <input type="button" value="mettre dans le panier" onclick="valideChoice()">
                     </div>
                 </div>
             </div>
