mise en place du caddie

--- a/front/caddie.html
+++ b/front/caddie.html
@@ -56,12 +56,12 @@
         </div>
         <div class="full">
             <div class="row d-flex justify-content-center">
-                <div class="col-3 col-md-2 border">Produit</div>
-                <div class="col-3 col-md-2 border">Prix Unitaire</div>
-                <div class="col-3 col-md-2 border">Nombre</div>
-                <div class="col-3 col-md-2 border">Total</div>
+                <div class="col-3 col-md-2 border product-cards">Produit</div>
+                <div class="col-3 col-md-2 border price-cards">Prix Unitaire</div>
+                <div class="col-3 col-md-2 border number-cards">Nombre</div>
+                <div class="col-3 col-md-2 border total-cards">Total</div>
             </div>
-            <div class="row d-flex justify-vontent-center"></div>
+            <div class="product-row"></div>
             <br>
             <div class="row">
                 <div class="col-6">
