--- a/front/caddie.html
+++ b/front/caddie.html
@@ -57,9 +57,10 @@
         <div class="full">
             <div class="row d-flex justify-content-center">
                 <div class="col-3 col-md-2 border product-cards">Produit</div>
-                <div class="col-3 col-md-2 border price-cards">Prix Unitaire</div>
-                <div class="col-3 col-md-2 border number-cards">Nombre</div>
-                <div class="col-3 col-md-2 border total-cards">Total</div>
+                <div class="col-2 col-md-2 border price-cards">Prix Unitaire</div>
+                <div class="col-2 col-md-2 border number-cards">Nombre</div>
+                <div class="col-2 col-md-2 border total-cards">Total</div>
+                <div class="col-3 col-md-2 border total-cards">Modif</div>
             </div>
             <div class="product-row"></div>
             <br>
@@ -89,6 +90,7 @@
             </div>
         </div>
     </main>
+    <script src="./js/function.js"></script>
     <script src="./js/caddie.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
