--- a/front/caddie.html
+++ b/front/caddie.html
@@ -90,8 +90,9 @@
             </div>
         </div>
     </main>
-    <script src="./js/function.js"></script>
-    <script src="./js/caddie.js"></script>
+    <script defer src="./js/function.js"></script>
+    <script defer src="./js/caddie.js"></script>
+    <script defer src="./js/consolelog.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
