--- a/front/test.html
+++ b/front/test.html
@@ -42,8 +42,8 @@
     </div>
     <div class="input-new"></div>
   
-    
-    <script src="./js/test.js"></script>
+    <script defer src="./js/fetch.js"></script>
+    <script defer src="./js/test.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
