--- a/front/finish.html
+++ b/front/finish.html
@@ -55,6 +55,7 @@
             </div>
     </main>
     <script async src="./js/script.js"></script>
+    <script defer src="./js/fetch.js"></script>
     <script defer src="./js/finish.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
