--- a/front/finish.html
+++ b/front/finish.html
@@ -49,8 +49,8 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <p>Voici son recapilatif:</p>
-                    <p id="recapitulatif"></p>
+                    <p>Voici son numéro : 
+                    <span id="recapitulatif"></span></p>
                 </div>
             </div>
     </main>
