--- a/front/finish.html
+++ b/front/finish.html
@@ -53,6 +53,17 @@
                     <span id="recapitulatif"></span></p>
                 </div>
             </div>
+            <div class="bg-dark">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-6 col-md-3 text-white"><span>Nos conditions generales</span></div>
+                        <div class="col-6 col-md-3 text-white"><span>Contacter nous</span></div>
+                        <div class="col-6 col-md-3 text-white"><span>Nos reseaux sociaux</span></div>
+                        <div class="col-6 col-md-3 text-white"><span>Orinoco tout droit reservé</span></div>
+                    </div>
+                </div>
+            </div>
+    
     </main>
     <script async src="./js/script.js"></script>
     <script defer src="./js/fetch.js"></script>
