--- a/front/index.html
+++ b/front/index.html
@@ -33,7 +33,8 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="caddie.html">Panier</a>
-                            </li>                            <li class="nav-item">
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="test.html">test</a>
                             </li>
 
@@ -48,16 +49,26 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <p>description de orinoco</p>
+                    <h1>Bienvenue sur Orinoco, vendeur de peluche en ligne.</h1>
 
                 </div>
             </div>
-            <div class="row border">
+            <div class="row">
             </div>
         </div>
 
+        <div class="bg-dark">
+            <div class="container">
+                <div class="row">
+                    <div class="col-6 col-md-3 text-white"><span>Nos conditions generales</span></div>
+                    <div class="col-6 col-md-3 text-white"><span>Contacter nous</span></div>
+                    <div class="col-6 col-md-3 text-white"><span>Nos reseaux sociaux</span></div>
+                    <div class="col-6 col-md-3 text-white"><span>Orinoco tout droit reservé</span></div>
+                </div>
+            </div>
+        </div>
     </main>
-    <script async src="js/script.js"></script>
+ 
     <script defer src="js/function.js"></script>
     <script defer src="js/fetch.js"></script>
     <script defer src="js/menu.js"></script>
