--- a/front/caddie.html
+++ b/front/caddie.html
@@ -64,36 +64,68 @@
             </div>
             <div class="product-row"></div>
             <br>
-            <div class="row">
-                <div class="col-6">
+            <div id="verif"></div>
+            <div class="row d-flex justify-content-center">
+                <div class="col-12 col-md-6 ">
                     <form action="finish.html" class="formulaire">
-                        <label for="name">Entrer votre nom</label>
-                        <input type="text" name="name" id="name"><span id="firstName-error"></span>
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text col-12" id="basic-addon1">Nom</span>
+                            </div>
+                            <input type="text" class="form-control" id="name" placeholder="Dupont" aria-label="Username"
+                                aria-describedby="basic-addon1">
+                        </div>
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text col-12" id="basic-addon1">Prénom</span>
+                            </div>
+                            <input type="text" class="form-control" id="prenom" placeholder="Henri"
+                                aria-label="Username" aria-describedby="basic-addon1">
+                        </div>
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text col-12" id="basic-addon1">Adresse</span>
+                            </div>
+                            <input type="text" class="form-control" id="adresse" placeholder="12 rue de fontaine"
+                                aria-label="Username" aria-describedby="basic-addon1">
+                        </div>
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text col-12" id="basic-addon1">Ville</span>
+                            </div>
+                            <input type="text" class="form-control" id="ville" placeholder="Thonon-les-bains"
+                                aria-label="Username" aria-describedby="basic-addon1">
+                        </div>
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control" placeholder="henri.dupont@joyeux.fr"
+                                aria-label="Recipient's username" aria-describedby="basic-addon2" id="email">
+                            <div class="input-group-append">
+                                <span class="input-group-text" id="basic-addon2">@example.com</span>
+                            </div>
+                        </div>
                         <br>
-                        <label for="prenom">Entrer votre prénom</label>
-                        <input type="text" name="prenom" id="prenom"><span id="lastName-error"></span>
-                        <br>
-                        <label for="adresse">Entrer votre adresse</label>
-                        <input type="text" name="adresse" id="adresse"><span id="address-error"></span>
-                        <br>
-                        <label for="ville">Entrer votre ville</label>
-                        <input type="text" name="ville" id="ville"><span id="city-error"></span>
-                        <br>
-                        <label for="email">Entrer votre email</label>
-                        <input type="email" name="email" id="email"><span id="email-error"></span>
-                        <br>
-                        <br>
-                        <input type="submit" value="Commander" id="submit-cards">
-
+                        <div class="row d-flex justify-content-center">
+                        <input type="button" class="btn btn-primary submit-cards mb-5" value="Commander">
+                        </div>
                     </form>
                 </div>
             </div>
         </div>
+        <div class="bg-dark">
+            <div class="container">
+                <div class="row">
+                    <div class="col-6 col-md-3 text-white"><span>Nos conditions generales</span></div>
+                    <div class="col-6 col-md-3 text-white"><span>Contacter nous</span></div>
+                    <div class="col-6 col-md-3 text-white"><span>Nos reseaux sociaux</span></div>
+                    <div class="col-6 col-md-3 text-white"><span>Orinoco tout droit reservé</span></div>
+                </div>
+            </div>
+        </div>
+
     </main>
     <script defer src="./js/function.js"></script>
     <script defer src="./js/fetch.js"></script>
     <script defer src="./js/caddie.js"></script>
- 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
