--- a/front/visual.html
+++ b/front/visual.html
@@ -43,8 +43,8 @@
         </div>
     </header>
     <main>
-        <div class="row">
-            <div class="col-12 col-lg-6">
+        <div class="row d-flex justify-content-center">
+            <div class="col-12 col-lg-6 col-xl-4">
                 <div class="row">
                     <div class="col-12 text-center titre p-3 h1"></div>
                     <div class="col-12 text-center price p-3"></div>
@@ -61,6 +61,17 @@
             </div>
             <div class="col-12 col-lg-6 image"></div>
         </div>
+        <div class="bg-dark">
+            <div class="container">
+                <div class="row">
+                    <div class="col-6 col-md-3 text-white"><span>Nos conditions generales</span></div>
+                    <div class="col-6 col-md-3 text-white"><span>Contacter nous</span></div>
+                    <div class="col-6 col-md-3 text-white"><span>Nos reseaux sociaux</span></div>
+                    <div class="col-6 col-md-3 text-white"><span>Orinoco tout droit reservé</span></div>
+                </div>
+            </div>
+        </div>
+
     </main>
 
 
