--- a/front/caddie.html
+++ b/front/caddie.html
@@ -104,14 +104,14 @@
                             </div>
                         </div>
                         <br>
-                        <div class="row d-flex justify-content-center">
+                        <div class="row d-flex justify-content-center command-button">
                         <input type="button" class="btn btn-primary submit-cards mb-5" value="Commander">
                         </div>
                     </form>
                 </div>
             </div>
         </div>
-        <div class="bg-dark">
+        <div class="bg-dark footer">
             <div class="container">
                 <div class="row">
                     <div class="col-6 col-md-3 text-white"><span>Nos conditions generales</span></div>
@@ -123,9 +123,6 @@
         </div>
 
     </main>
-    <script defer src="./js/function.js"></script>
-    <script defer src="./js/fetch.js"></script>
-    <script defer src="./js/caddie.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
@@ -135,7 +132,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-
+        <script defer src="./js/function.js"></script>
+        <script defer src="./js/fetch.js"></script>
+        <script defer src="./js/caddie.js"></script>
+    
 </body>
-
 </html>
