--- a/front/finish.html
+++ b/front/finish.html
@@ -53,7 +53,7 @@
                     <span id="recapitulatif"></span></p>
                 </div>
             </div>
-            <div class="bg-dark">
+            <div class="bg-dark footer">
                 <div class="container">
                     <div class="row">
                         <div class="col-6 col-md-3 text-white"><span>Nos conditions generales</span></div>
@@ -65,9 +65,6 @@
             </div>
     
     </main>
-    <script async src="./js/script.js"></script>
-    <script defer src="./js/fetch.js"></script>
-    <script defer src="./js/finish.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
     crossorigin="anonymous"></script>
@@ -77,6 +74,9 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
+    <script async src="./js/script.js"></script>
+    <script defer src="./js/fetch.js"></script>
+    <script defer src="./js/finish.js"></script>
 
 </body>
 </html>
