--- a/front/index.html
+++ b/front/index.html
@@ -57,7 +57,7 @@
             </div>
         </div>
 
-        <div class="bg-dark">
+        <div class="bg-dark footer">
             <div class="container">
                 <div class="row">
                     <div class="col-6 col-md-3 text-white"><span>Nos conditions generales</span></div>
@@ -69,9 +69,6 @@
         </div>
     </main>
  
-    <script defer src="js/function.js"></script>
-    <script defer src="js/fetch.js"></script>
-    <script defer src="js/menu.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
@@ -81,7 +78,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-
+        <script defer src="js/function.js"></script>
+        <script defer src="js/fetch.js"></script>
+        <script defer src="js/menu.js"></script>
+    
 </body>
 
 </html>
