--- a/front/visual.html
+++ b/front/visual.html
@@ -61,7 +61,7 @@
             </div>
             <div class="col-12 col-lg-6 image"></div>
         </div>
-        <div class="bg-dark">
+        <div class="bg-dark footer">
             <div class="container">
                 <div class="row">
                     <div class="col-6 col-md-3 text-white"><span>Nos conditions generales</span></div>
@@ -76,10 +76,6 @@
 
 
 
-    <script async src="./js/script.js"></script>
-    <script defer src="./js/function.js"></script>
-    <script defer src="./js/fetch.js"></script>
-    <script defer src="./js/visual.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
     crossorigin="anonymous"></script>
@@ -89,6 +85,10 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
+    <script async src="./js/script.js"></script>
+    <script defer src="./js/function.js"></script>
+    <script defer src="./js/fetch.js"></script>
+    <script defer src="./js/visual.js"></script>
 
 </body>
 
