--- a/front/caddie.html
+++ b/front/caddie.html
@@ -63,6 +63,13 @@
                 <div class="col-3 col-md-2 border total-cards">Modif</div>
             </div>
             <div class="product-row"></div>
+            <div class="row d-flex justify-content-center">
+                <div class="col-3 col-md-2 product-cards"></div>
+                <div class="col-2 col-md-2 price-cards"></div>
+                <div class="col-2 col-md-2 border number-cards">Total general</div>
+                <div class="col-2 col-md-2 border total-cards array-total"></div>
+                <div class="col-3 col-md-2 total-cards"></div>
+            </div>
             <br>
             <div id="verif"></div>
             <div class="row d-flex justify-content-center">
